Fixing Extra Space in Style and Utility CSS

--- a/utility.css
+++ b/utility.css
@@ -1,5 +1,4 @@
 /* Container Padding*/
-
 .container-padding{
     padding: 5% 9%;
 }
@@ -14,15 +13,18 @@
     margin-bottom: 20px;
     font-size: 28px;
 }
+
 .expolre-content-paragraph{
     line-height: 2;
     font-size: 18px;
     margin-bottom: 19px;
 }
+
 .expolre-content-ul{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
 .expolre-content-ul-li{
     list-style-type: square;
 
@@ -32,25 +34,23 @@
 }
 
 /* Learn More BTN */
-
 .btn-learn-more{
-    /* position: absolute; */
-    /* top: 0; */
-    /* bottom: 10px;
-    right: 10px; */
     text-align: right;
     margin-top: 20px;
 }
+
 .btn-learn-more button{
     background-color: transparent;
     border: none;
     color: #005eb8;
     font-weight: 500;
 }
+
 .btn-container{
     text-align: center;
     margin-top: 20px;
 }
+
 .container-btn{
     padding: 15px 35px;
     border: none;
@@ -60,12 +60,24 @@
 .disnone-2{
     display: none;
 }
+
 .disnone-1{
     display: none;
 }
+
 .disblock-1{
     display: block;
 }
+
 .disno{
     display: none;
+}
+
+.ask-us{
+    background-color: #21609b;
+    padding: 10px 40px;
+    font-size: 14px;
+    border: none;
+    font-weight: 600;
+    color: #FFFFFF;
 }
